fast/scrolling/scroll-behavior-invalidate-if-disabled.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=210917

Reviewed by Darin Adler.

The flaky failure is caused by reusing the CSSPropertyInfo value cached propertyInfoCache
after experimental flags changed. Add propertyInfoFromJavaScriptCSSPropertyName
to perform disabled checking after parsing. If the property is disabled, it will return
an invalid CSSPropertyInfo instead.

* css/CSSStyleDeclaration.cpp:
(WebCore::CSSStyleDeclaration::getCSSPropertyIDFromJavaScriptPropertyName):
(WebCore::CSSStyleDeclaration::namedItem):
(WebCore::CSSStyleDeclaration::setNamedItem):


Canonical link: https://commits.webkit.org/223924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260723 268f45cc-cd09-0410-ab3c-d52691b4dbfc